--- a/RunCoin/StroyBoards/Base.lproj/Main.storyboard
+++ b/RunCoin/StroyBoards/Base.lproj/Main.storyboard
@@ -757,21 +757,46 @@
             </objects>
             <point key="canvasLocation" x="3972" y="1100.5997001499252"/>
         </scene>
-        <!--Item-->
+        <!--Feed View Controller-->
         <scene sceneID="gSF-tT-mPC">
             <objects>
-                <viewController id="g2p-PJ-owc" sceneMemberID="viewController">
+                <viewController id="g2p-PJ-owc" customClass="FeedViewController" customModule="RunCoin" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ICp-5v-XqY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CzI-PW-8R4">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FeedCell" rowHeight="45" id="pV9-Kf-UNL">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="45"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pV9-Kf-UNL" id="pLR-ir-0UV">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="CzI-PW-8R4" firstAttribute="top" secondItem="ICp-5v-XqY" secondAttribute="top" id="0Vm-eD-FKN"/>
+                            <constraint firstItem="CzI-PW-8R4" firstAttribute="trailing" secondItem="020-d6-ZpP" secondAttribute="trailing" id="3ka-V2-j9w"/>
+                            <constraint firstAttribute="bottom" secondItem="CzI-PW-8R4" secondAttribute="bottom" id="fRH-vx-JvR"/>
+                            <constraint firstItem="CzI-PW-8R4" firstAttribute="leading" secondItem="020-d6-ZpP" secondAttribute="leading" id="gIh-1u-Quu"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="020-d6-ZpP"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="sjM-Vj-msu"/>
+                    <navigationItem key="navigationItem" id="1bz-rb-ZpZ"/>
+                    <connections>
+                        <outlet property="tableView" destination="CzI-PW-8R4" id="1Q0-DM-BM0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0lM-eg-t0e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3129" y="2007"/>
+            <point key="canvasLocation" x="3972" y="1889"/>
         </scene>
         <!--Run Stats View Controller-->
         <scene sceneID="cv8-ga-VlB">
@@ -916,12 +941,31 @@
                     </tabBar>
                     <connections>
                         <segue destination="Ewu-hk-YJB" kind="relationship" relationship="viewControllers" id="ixe-zI-wbF"/>
-                        <segue destination="g2p-PJ-owc" kind="relationship" relationship="viewControllers" id="pHe-1Z-DOX"/>
+                        <segue destination="k4Z-Wb-t4U" kind="relationship" relationship="viewControllers" id="pHe-1Z-DOX"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3fJ-as-LSa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2189.5999999999999" y="1100.5997001499252"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="VWy-5b-aQT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="k4Z-Wb-t4U" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="sjM-Vj-msu"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cci-qe-FfS">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="g2p-PJ-owc" kind="relationship" relationship="rootViewController" id="lbS-ke-fpP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T39-G5-mDc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3129" y="1889"/>
         </scene>
     </scenes>
     <resources>
